# internal/gen/models/configuration.go
@@ -1,105 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"context"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag"
-	"github.com/go-openapi/validate"
-)
-
-// Configuration configuration
-//
-// swagger:model configuration
-type Configuration struct {
-
-	// certificate
-	// Required: true
-	Certificate *string `json:"certificate"`
-
-	// http port
-	// Required: true
-	HTTPPort *int64 `json:"http_port"`
-
-	// private key
-	// Required: true
-	PrivateKey *string `json:"private_key"`
-}
-
-// Validate validates this configuration
-func (m *Configuration) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.validateCertificate(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.validateHTTPPort(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.validatePrivateKey(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *Configuration) validateCertificate(formats strfmt.Registry) error {
-
-	if err := validate.Required("certificate", "body", m.Certificate); err != nil {
-		return err
-	}
-
-	return nil
-}
-
-func (m *Configuration) validateHTTPPort(formats strfmt.Registry) error {
-
-	if err := validate.Required("http_port", "body", m.HTTPPort); err != nil {
-		return err
-	}
-
-	return nil
-}
-
-func (m *Configuration) validatePrivateKey(formats strfmt.Registry) error {
-
-	if err := validate.Required("private_key", "body", m.PrivateKey); err != nil {
-		return err
-	}
-
-	return nil
-}
-
-// ContextValidate validates this configuration based on context it is used
-func (m *Configuration) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *Configuration) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *Configuration) UnmarshalBinary(b []byte) error {
-	var res Configuration
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
